[tool.poetry]
name = "useful-tool-collections"
version = "0.1.0"
description = ""
authors = ["Stanley Huang <wenlien1001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
requests = "^2.31.0"
selenium = "^4.19.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
